# multi-agent-workflow-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.workdir/: multi_agent_platform.db  step18_smoke.db
apps/api-go/: README.md
apps/api-go/cmd/api/: main.go
apps/api-go/internal/authjwt/: validator.go
apps/api-go/internal/config/: config.go
apps/api-go/internal/contracts/: turn_execution.go
apps/api-go/internal/domain/: approvals.go  events.go  execution.go  identity.go  ids.go  lifecycle.go  planning.go  runs.go
apps/api-go/internal/httpapi/: approvals.go  auth.go  execution.go  handlers.go  lifecycle.go  middleware.go  router.go  runs.go  workflow.go
apps/api-go/internal/observability/: tracing.go
apps/api-go/internal/pythonworker/: client.go
apps/api-go/internal/requestmeta/: requestmeta.go
apps/api-go/internal/storage/: approvals.go  artifacts.go  identity.go  lifecycle.go  runs.go  workflow.go
apps/api-go/queries/: runs.sql
apps/api-go/schema/: 0002_identity_ownership.sql  0003_event_observability.sql
docs/: architecture-overview.md  decision-log.md  execution-charter.md  go-auth-rbac.md  go-observability.md  hybrid-go-control-plane.md  identity-ownership.md  phase-status.md  provider-policies.md  release-summary.md  toolchain-baseline.md
infra/docker/: compose.hybrid.yml
migrations/versions/: 0002_identity_ownership.py  0003_event_observability.py
services/agent_worker/: README.md  app.py
src/multi_agent_platform/: __init__.py  main.py
src/multi_agent_platform/agents/: __init__.py  executors.py  fake_provider.py  llm_executor.py  openai_provider.py  providers.py  runtime.py
src/multi_agent_platform/api/: __init__.py  app.py  dependencies.py
src/multi_agent_platform/api/routes/: runs.py
src/multi_agent_platform/application/: __init__.py  run_approvals.py  run_events.py  run_outputs.py  run_plans.py  run_tool_calls.py  run_turns.py  run_verifications.py  run_views.py  runs.py
src/multi_agent_platform/config/: __init__.py  settings.py
src/multi_agent_platform/contracts/: __init__.py  common.py  llm_call_views.py  llm_calls.py  run_approval_views.py  run_approvals.py  run_commands.py  run_event_views.py  run_events.py  run_output_views.py  run_outputs.py  run_plan_views.py  run_plans.py  run_queries.py  run_tool_call_views.py  run_tool_calls.py  run_turn_views.py  run_turns.py  run_verification_views.py  run_verifications.py  run_views.py  runs.py  turn_execution.py
src/multi_agent_platform/orchestration/: __init__.py  state.py
src/multi_agent_platform/planning/: __init__.py  templates.py
src/multi_agent_platform/storage/: __init__.py  llm_call_repository.py  run_approval_repository.py  run_event_repository.py  run_output_repository.py  run_plan_repository.py  run_repository.py  run_tool_call_repository.py  run_turn_repository.py  run_verification_repository.py  sql_repository.py
src/multi_agent_platform/storage/db/: __init__.py  models.py  session.py
src/multi_agent_platform/tools/: __init__.py  registry.py
src/multi_agent_platform/web/: app.js  index.html  styles.css
tests/integration/: test_sql_persistence.py
tests/unit/: test_repo_foundation.py
tests/unit/agents/: test_executors.py  test_fake_provider.py  test_llm_executor.py  test_openai_provider.py  test_runtime.py
tests/unit/api/: test_health.py  test_run_outputs.py  test_runs.py
tests/unit/application/: test_llm_execution.py  test_run_outputs.py  test_run_service.py
tests/unit/contracts/: test_runs.py  test_turn_execution.py
tests/unit/orchestration/: test_state.py
tests/unit/storage/: test_llm_call_repository.py  test_run_approval_repository.py  test_run_event_repository.py  test_run_output_repository.py  test_run_repository.py  test_run_tool_call_repository.py  test_run_turn_repository.py  test_run_verification_repository.py  test_sql_llm_call_repository.py
tests/unit/tools/: test_registry.py
