[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runway"
version = "0.1.0"
description = "AI workflow automation engine for auditable business processes."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
keywords = ["agents", "fastapi", "llm", "orchestration", "research", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115,<1",
    "pydantic>=2,<3",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.34,<1",
]

[project.urls]
Homepage = "https://github.com/waqasraza123/agent-runway"
Repository = "https://github.com/waqasraza123/agent-runway"
Issues = "https://github.com/waqasraza123/agent-runway/issues"

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
multi_agent_platform = ["web/*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "apps", "services", "packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q --tb=short"
